# ViewAssistCompanionApp

./: build.gradle.kts  settings.gradle.kts  version.properties
.github/workflows/: build-action-artifacts.yml  build-action-artifacts.yml.DISABLED  build-debug-artifact.yml  build-gradle.yml  signed-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jjoe64/motiondetection/motiondetection/: Comparer.java  ImageProcessing.java  MotionDetector.java
app/src/main/java/com/msp1974/vacompanion/: AppExceptionHandler.kt  MainActivity.kt  VACAApplication.kt
app/src/main/java/com/msp1974/vacompanion/audio/: Alarm.kt  AlarmPlayer.kt  ApmTapAudioProcessor.kt  ApmTappedExoPlayerFactory.kt  Audio.kt  AudioDSP.kt  AudioFormat.kt  AudioStream.kt  EffectsPlayer.kt  ExoPlayer.kt  MediaPlayer.kt  MicrophoneInput.kt  PCMPlayer.kt  RenderTapResampler.kt  Speex.kt  (+4 more)
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
microfeatures/: build.gradle.kts
microfeatures/src/androidTest/java/com/example/microfeatures/: ExampleInstrumentedTest.kt
microfeatures/src/main/cpp/: MicroFrontend.cpp
webrtc-apm/: .gitignore  README.md  build.gradle.kts
webrtc-apm/native/: BUILD.gn  README.build.md  WEBRTC_REVISION  apm_jni.cpp  build_webrtc.sh  build_webrtc_docker.sh  clean_local_cache.sh  clean_outputs.sh
webrtc-apm/native/docker/: Dockerfile
webrtc-apm/src/main/java/com/viewassist/webrtc/: NativeApm.java  WebRtcApm.java
webrtc-apm/src/main/jniLibs/: BUILD_INFO.txt
(+113 files in other folders)
